--- a/my-app/src/app/app.component.css
+++ b/my-app/src/app/app.component.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
     width: 80%;
     justify-content: center;
     background: rgb(169, 191, 162);
@@ -22,4 +22,4 @@
  outline: none;
  font-size: 18px;
  
-}
+} */
