--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -4,20 +4,6 @@
     
 
 
-<h1>Meu projeto Angular rodando</h1>
-
-<h2>Nome:</h2> 
-<div class = "img"> </div> 
-   <h3> {{ nome }} </h3> 
-
-
-<div>
-    <input type="button"  value="-" (click)="menos"/>
-    <h3>{{ count }}</h3>
-</div>
-
-<div>
-    <input type="button"  value="+" (click)="mais"/>
-</div>
+<app-hero></app-hero>
 
 </div>
