aula-capitao-america

--- a/my-app/src/app/components/hero/hero.component.css
+++ b/my-app/src/app/components/hero/hero.component.css
@@ -1,10 +1,73 @@
 .container {
-    background: rgb(184, 152, 152);
+    background: rgb(66, 73, 175);
     height: 200px;
+    display: flex;
+    align-content: flex-start;
+    flex-wrap: wrap;
 }
 
 .container .Header {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 10px;
+    width: 100;
+    align-items: center;
+    padding: 30px;
+    background: rgb(188, 228, 238);
+    
 }
+
+.container .Header label{
+  font-size: 22px;
+    
+}
+
+.container .Header input{
+    font-size: 22px;
+    background: cornflowerblue;
+    outline: none;
+    height: 45px;
+}
+
+.container .Header button {
+    font-size: 22px;
+    width: 150px;
+    height: 40px;
+}
+
+.container .heroes{
+    padding: 30px;
+    font-size: 20px;
+    width: 100px;
+
+}
+
+.container .heroes ul li {
+    list-style: none;
+    border: solid black;
+    padding: 10px;
+    margin: 5px;
+    transition: background 500ms;
+
+}
+
+.container .heroes ul li:hover {
+ background: rgb(222, 245, 174);   
+}
+
+.container .card-hero {
+
+    background: wheat;
+    width: 400px;
+    height: 25px;
+    margin-left: 35px;
+    border-radius: 15px;
+    padding: 10px;
+    border: 1px solid black;
+
+
+}
+ .container .card-hero .photo {
+     height: 10px;
+
+ }
