--- a/my-app/src/app/components/login/login.component.css
+++ b/my-app/src/app/components/login/login.component.css
@@ -1,3 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
+
+*{
+    font-family: 'Poppins', sans-serif;
+}
+
+
+
+h2 {
+    margin: 20px;
+}
+
+.error {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    background: tomato;
+    width: 345px;
+    padding: 5px;
+    border-radius: 8px;
+    box-shadow: 2px 2px 5px #383838;
+    margin-bottom: 5px;
+    
+}
+
+
+
 .container {
     background: #9633FF;
     height:100vh ;
@@ -36,9 +63,41 @@
     border: none;
     width: 210px;
     color:#999;
+    height: 30px;
+    margin-left: 5px;
+    outline: none;
 }
 
 i {
     font-size: 30px;
     color: linear-gradient (#F1F5FF,#9734FF);
+}
+
+
+.remember {
+display: flex;
+justify-content: space-between;
+width: 330px;
+margin: 20px;
+}
+
+.remember div {
+    display: flex;
+    gap: 10px;
+}
+
+.remember a {
+    text-decoration: none;
+    color: #383838;
+}
+
+
+.button {
+    width: 180px;
+    height: 40px;
+    margin-bottom: 20px;
+    border-radius: 40px;
+    box-shadow: 2px 2px 10px #383838;
+    background: linear-gradient(60deg, rgb(149, 20, 182), rgb(78, 78, 209));
+    color: white;
 }
