--- a/my-app/src/app/components/login/login.component.html
+++ b/my-app/src/app/components/login/login.component.html
@@ -1,6 +1,11 @@
 <div class="container">
     <div class="login">
         <h2> Sing in</h2>
+         <div class="error">
+            <i class='bx bxs-comment-error' style='color:#9633ff'  ></i>
+         <span>Login ou senha incorretos</span>
+        </div>
+
         <div class="input">
             <i class='bx bxs-envelope' style='color:#8115f1' ></i>
             <input type="text" name="login" id="login" value="E-mail">
@@ -14,15 +19,17 @@
 
 
         <div class="remember">
+
             <div>
                 <input type="checkbox" name="remember" id="remember" />
-                <h4>Remember me</h4>
+                <a href="#">Remember me</a>
             </div>
-            <h4>Forgot password?</h4>
+
+            <a href="#">Forgot password?</a>
         </div>
 
 
-        <button> SING IN</button>
+        <button class="button"> SING IN</button>
         <h3>Don't have account? Create</h3>
 
 
