--- a/my-app/src/app/components/login/login.component.css
+++ b/my-app/src/app/components/login/login.component.css
@@ -25,6 +25,21 @@ h2 {
 
 
 
+.Sucess {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    background: rgb(21, 186, 3);
+    width: 345px;
+    padding: 5px;
+    border-radius: 8px;
+    box-shadow: 2px 2px 5px #383838;
+    margin-bottom: 5px;
+    
+
+}
+
+
 .container {
     background: #9633FF;
     height:100vh ;
@@ -66,6 +81,7 @@ h2 {
     height: 30px;
     margin-left: 5px;
     outline: none;
+    font-size: 15px;
 }
 
 i {
@@ -100,4 +116,11 @@ margin: 20px;
     box-shadow: 2px 2px 10px #383838;
     background: linear-gradient(60deg, rgb(149, 20, 182), rgb(78, 78, 209));
     color: white;
+    cursor: pointer;
+}
+
+
+.button:hover {
+    filter: brightness(140%);
+
 }
