--- a/my-app/src/app/components/login/login.component.html
+++ b/my-app/src/app/components/login/login.component.html
@@ -1,18 +1,27 @@
 <div class="container">
     <div class="login">
         <h2> Sing in</h2>
-         <div class="error">
+         <div class="error" *ngIf = "isError">
             <i class='bx bxs-comment-error' style='color:#9633ff'  ></i>
-         <span>Login ou senha incorretos</span>
+            <span>Login or password is incorrect!</span>
         </div>
+
+        <div class="Sucess" *ngIf = "isSucess">
+            <i class='bx bxs-comment-error' style='color:#9633ff'  ></i>
+            <span> Sucessful!</span>
+        </div>
+
+
+
+
 
         <div class="input">
             <i class='bx bxs-envelope' style='color:#8115f1' ></i>
-            <input type="text" name="login" id="login" value="E-mail">
+            <input type="text" name="login" id="login" placeholder="E-mail" [(ngModel)]="user">
         </div>
         <div class="input">
             <i class='bx bxs-lock-alt' style='color:#8115f1' ></i>
-            <input type="text" name="password" id="password" value="Password"> 
+            <input type="password" name="password" id="password" placeholder="Password" [(ngModel)]="pwd"> 
             <i class='bx bx-low-vision' style='color:#8115f1' ></i>
         </div>
 
@@ -22,14 +31,14 @@
 
             <div>
                 <input type="checkbox" name="remember" id="remember" />
-                <a href="#">Remember me</a>
+                <h3>Remember me</h3>
             </div>
 
             <a href="#">Forgot password?</a>
         </div>
 
 
-        <button class="button"> SING IN</button>
+        <button class="button"  (click)="login()"> SING IN</button>
         <h3>Don't have account? Create</h3>
 
 
