--- a/my-app/src/app/components/create-user/create-user.component.html
+++ b/my-app/src/app/components/create-user/create-user.component.html
@@ -1,1 +1,32 @@
-<p>create-user works!</p>
+<div class="container">
+    <div class="create-user">
+
+
+        <div class="error" *ngIf="isError">
+            <i class='bx bxs-comment-error' style='color:#9633ff'></i>
+            <span>As senhas não correspondem</span>
+        </div>
+        <div class="sucess" *ngIf="isSucess">
+            <i class='bx bxs-comment-error' style='color:#9633ff'></i>
+            <span>Succes!!</span>
+        </div>
+
+
+        <div class="input">
+            <i class='bx bxs-envelope' style='color:#8115f1'></i>
+            <input type="text" name="login" id="login" placeholder="E-mail" [(ngModel)]="user">
+        </div>
+        <div class="input">
+            <i class='bx bxs-lock-alt' style='color:#8115f1'></i>
+            <input type="password" name="password" id="password" placeholder="Password" [(ngModel)]="pwd">
+            <i class='bx bx-low-vision' style='color:#8115f1'></i>
+        </div>
+        <div class="input">
+            <i class='bx bxs-lock-alt' style='color:#8115f1'></i>
+            <input type="double" name="double" id="double" placeholder="Password" [(ngModel)]="double">
+            <i class='bx bx-low-vision' style='color:#8115f1'></i>
+        </div>
+
+        <button class="button" (click)="login()"> create</button>
+    </div>
+</div>
