--- a/my-app/src/app/components/page-not-found/page-not-found.component.html
+++ b/my-app/src/app/components/page-not-found/page-not-found.component.html
@@ -1,1 +1,15 @@
-<h1>Page not Found!</h1>
+<div class="container1">
+
+    <div class="error">
+
+        <i class='bx bx-chat'></i>
+        <h1>Ei humano, sua pagina não foi encontrada!</h1>
+    </div>
+    <div class="container">
+
+
+
+        <h2>O conteudo que você solicitou não foi contrado em nossos servidores.</h2>
+
+    </div>
+</div>
