--- a/my-app/src/app/components/dashboard/dashboard.component.html
+++ b/my-app/src/app/components/dashboard/dashboard.component.html
@@ -1,7 +1,5 @@
-
 <div class="container">
-
-   <!-- ----------- header!---------------- -->
+    <!-- ----------- header!---------------- -->
     <div class="header1">
         <h2>dashboard</h2>
         <i class='bx bx-menu'></i>
@@ -9,64 +7,71 @@
     <!-- -------fim1----- -->
 
 
-<!-- ----------header2----------- -->
+    <!-- ----------header2----------- -->
     <div class="header2">
 
         <div class="box-esq">
-            <i class='bx bxs-bell' ></i>
-            <i class='bx bxs-envelope' ></i>
-            <i class='bx bxs-cog' ></i>
+            <i class='bx bxs-bell'></i>
+            <i class='bx bxs-envelope'></i>
+            <i class='bx bxs-cog'></i>
         </div>
 
 
         <div class="box-dir">
-            <i class='bx bx-search-alt-2' ></i>
-            <i class='bx bxs-rocket' ></i>
+            <i class='bx bx-search-alt-2'></i>
+            <i class='bx bxs-rocket'></i>
         </div>
 
-    </div> 
+    </div>
 
     <!-- -----------fim-------- -->
 
-<!-- ----------MENU------------- -->
+    <!-- ----------MENU------------- -->
 
     <div class="menu">
-    <ul>
-        <li><a href="#">dashboard</a></li>
-        <li><a href="#">charts</a></li>
-        <li><a href="#">tables</a></li>
-        <li><a href="#">forms</a></li>
-        <li><a href="#">UI elements</a></li>
+        <ul>
+            <li><i class='bx bxs-dashboard'></i><a href="#"> dashboard</a></li>
+            <li><i class='bx bxs-analyse'></i><a href="#"> Análise</a></li>
+            <li><i class='bx bx-task'></i><a href="#">Todo List</a></li>
+            <li><i class='bx bxs-group'></i><a href="#">Equipe</a></li>
+            <li><i class='bx bxs-message-square-detail'></i><a href="#">Inbox</a></li>
+            <li><i class='bx bxs-star'></i><a href="#">Prioridades</a></li>
 
-    </ul>
+        </ul>
 
     </div>
 
-<!-- -------------CONTENT-------------- -->
+    <!-- -------------CONTENT-------------- -->
 
     <div class="content">
-        <div class="overview">
-            <div class="box-esq">
-                <h2>Overview</h2>
-            </div>
-    
-            <div class="box-dir">
-                <div class="today">today</div>
-                <div class="month">month</div>
-                <div class="year">year</div>
-                <button>Log out</button>
-            </div>
 
+
+        <div class="ad">
+            <div class="img">Imagem</div>
+            <div class="graph">Gráfico</div>
         </div>
 
+        <section>
+            <div class="box1">
+                <div class="title">
+                    <button>
+                        <i class='bx bx-plus' undefined></i>
+                    </button>
 
+                    <span>Membros do time</span>
+                </div>
+                <div class="member">
+                    Membros
+            </div>
+            <div class="title">
+                <button>
+                    <i class='bx bx-plus' undefined></i>
+                </button>
 
-        <div class="cards">
-
-
-        </div>
-
+                <span>Atividades</span>
+            
+            <div class="box2"></div>
+            </section>
     </div>
-
 
 </div>
