--- a/my-app/src/app/components/dashboard/dashboard.component.html
+++ b/my-app/src/app/components/dashboard/dashboard.component.html
@@ -1,51 +1,56 @@
 <div class="container">
-    <!-- ----------- header!---------------- -->
+    <!-- HEADER 1 -->
     <div class="header1">
         <h2>dashboard</h2>
-        <i class='bx bx-menu'></i>
+        <i class="bx bx-menu"></i>
     </div>
-    <!-- -------fim1----- -->
 
-
-    <!-- ----------header2----------- -->
+    <!-- HEADER 2 -->
     <div class="header2">
-
         <div class="box-esq">
-            <i class='bx bxs-bell'></i>
-            <i class='bx bxs-envelope'></i>
-            <i class='bx bxs-cog'></i>
+            <i class="bx bxs-bell"></i>
+            <i class="bx bx-envelope"></i>
+            <i class="bx bxs-cog"></i>
         </div>
-
-
         <div class="box-dir">
-            <i class='bx bx-search-alt-2'></i>
-            <i class='bx bxs-rocket'></i>
+            <i class="bx bx-search"></i>
+            <i class="bx bxs-rocket"></i>
         </div>
-
     </div>
 
-    <!-- -----------fim-------- -->
+    <div class="user-info">
+  xxx
+    </div>
 
-    <!-- ----------MENU------------- -->
 
+
+
+    <!-- MENU -->
     <div class="menu">
         <ul>
-            <li><i class='bx bxs-dashboard'></i><a href="#"> dashboard</a></li>
-            <li><i class='bx bxs-analyse'></i><a href="#"> Análise</a></li>
-            <li><i class='bx bx-task'></i><a href="#">Todo List</a></li>
-            <li><i class='bx bxs-group'></i><a href="#">Equipe</a></li>
-            <li><i class='bx bxs-message-square-detail'></i><a href="#">Inbox</a></li>
-            <li><i class='bx bxs-star'></i><a href="#">Prioridades</a></li>
+            <li>
+                <a href="#"> <i class="bx bxs-dashboard"></i>Dashboard</a>
+            </li>
 
+            <li>
+                <a href="#"><i class="bx bxs-analyse"></i>Análise</a>
+            </li>
+            <li>
+                <a href="#"><i class="bx bx-task"></i>Todo List</a>
+            </li>
+            <li>
+                <a href="#"> <i class="bx bxs-group"></i>Equipe</a>
+            </li>
+            <li>
+                <a href="#"><i class="bx bxs-group"></i>Inbox</a>
+            </li>
+            <li>
+                <a href="#"><i class="bx bxs-star"></i>Prioridades</a>
+            </li>
         </ul>
-
     </div>
-
-    <!-- -------------CONTENT-------------- -->
-
+    <!-- CONTENT -->
     <div class="content">
-
-
         <div class="ad">
             <div class="img">Imagem</div>
             <div class="graph">Gráfico</div>
@@ -55,23 +60,244 @@
             <div class="box1">
                 <div class="title">
                     <button>
-                        <i class='bx bx-plus' undefined></i>
+                        <i class="bx bx-plus"></i>
                     </button>
-
-                    <span>Membros do time</span>
+                    <span>Membros do Time</span>
                 </div>
                 <div class="member">
-                    Membros
+
+                    <div class="card-member">
+
+                        <div class="img">
+                            <img src="/assets/cara-feliz.png" alt="">
+                        </div>
+
+                        <div class="name">
+                            <h3>Prof. Carlos</h3>
+                            <h4>Professor</h4>
+                        </div>
+
+                    </div>
+                    <div class="card-member">
+
+                        <div class="img">
+                            <img src="/assets/cara-feliz.png" alt="">
+                        </div>
+
+                        <div class="name">
+                            <h3>Prof. Rodrigo</h3>
+                            <h4>Professor</h4>
+                        </div>
+
+                    </div>
+                    <div class="card-member">
+
+                        <div class="img">
+                            <img src="/assets/avatar.png" alt="">
+                        </div>
+
+                        <div class="name">
+                            <h3>Prof. Bruna</h3>
+                            <h4>Professora</h4>
+                        </div>
+
+                    </div>
+                    <div class="card-member">
+
+                        <div class="img">
+                            <img src="/assets/avatar.png" alt="">
+                        </div>
+
+                        <div class="name">
+                            <h3>Prof. Ivone</h3>
+                            <h4>Professora</h4>
+                        </div>
+
+                    </div>
+                    <div class="card-member">
+
+                        <div class="img">
+                            <img src="/assets/avatar.png" alt="">
+                        </div>
+
+                        <div class="name">
+                            <h3>Prof. Mariana</h3>
+                            <h4>Professora</h4>
+                        </div>
+
+                    </div>
+                    <div class="card-member">
+
+                        <div class="img">
+                            <img src="/assets/cara-feliz.png" alt="">
+                        </div>
+
+                        <div class="name">
+                            <h3>Prof. Apio</h3>
+                            <h4>Professor</h4>
+                        </div>
+
+                    </div>
+
+
+
+                </div>
+                <div class="title">
+                    <button>
+                        <i class="bx bx-plus"></i>
+                    </button>
+                    <span>Atividade</span>
+                </div>
+
+                <div class="activies">
+
+        <div class="item-1">
+            <div class="card-member">
+
+                <div class="img">
+                    <img src="/assets/cara-feliz.png" alt="">
+                </div>
+
+                <div class="name">
+                    <h3>Prof. Apio</h3>
+                    <h4>Professor</h4>
+                    <h4>11 de maio</h4>
+                </div>
+
             </div>
-            <div class="title">
-                <button>
-                    <i class='bx bx-plus' undefined></i>
-                </button>
 
-                <span>Atividades</span>
-            
-            <div class="box2"></div>
-            </section>
+        </div>
+
+
+
+        <div class="item-2"> <div class="card-member">
+
+            <div class="img">
+                <img src="/assets/avatar.png" alt="">
+            </div>
+
+            <div class="name">
+                <h3>Prof. Ivone</h3>
+                <h4>Professora</h4>
+            </div>
+
+        </div>
+        <div class="card-member">
+
+            <div class="img">
+                <img src="/assets/avatar.png" alt="">
+            </div>
+
+            <div class="name">
+                <h3>Prof. Mariana</h3>
+                <h4>Professora</h4>
+            </div>
+
+        </div>
+        <div class="card-member">
+
+            <div class="img">
+                <img src="/assets/cara-feliz.png" alt="">
+            </div>
+
+            <div class="name">
+                <h3>Prof. Apio</h3>
+                <h4>Professor</h4>
+            </div>
+
+        </div></div>
+
+
+
+        <div class="item-3"> <div class="card-member">
+
+            <div class="img">
+                <img src="/assets/avatar.png" alt="">
+            </div>
+
+            <div class="name">
+                <h3>Prof. Ivone</h3>
+                <h4>Professora</h4>
+            </div>
+
+        </div>
+        <div class="card-member">
+
+            <div class="img">
+                <img src="/assets/avatar.png" alt="">
+            </div>
+
+            <div class="name">
+                <h3>Prof. Mariana</h3>
+                <h4>Professora</h4>
+            </div>
+
+        </div>
+        <div class="card-member">
+
+            <div class="img">
+                <img src="/assets/cara-feliz.png" alt="">
+            </div>
+
+            <div class="name">
+                <h3>Prof. Apio</h3>
+                <h4>Professor</h4>
+            </div>
+
+        </div></div>
+
+
+
+        <div class="item-4"> <div class="card-member">
+
+            <div class="img">
+                <img src="/assets/avatar.png" alt="">
+            </div>
+
+            <div class="name">
+                <h3>Prof. Ivone</h3>
+                <h4>Professora</h4>
+            </div>
+
+        </div>
+        <div class="card-member">
+
+            <div class="img">
+                <img src="/assets/avatar.png" alt="">
+            </div>
+
+            <div class="name">
+                <h3>Prof. Mariana</h3>
+                <h4>Professora</h4>
+            </div>
+
+        </div>
+        <div class="card-member">
+
+            <div class="img">
+                <img src="/assets/cara-feliz.png" alt="">
+            </div>
+
+            <div class="name">
+                <h3>Prof. Apio</h3>
+                <h4>Professor</h4>
+            </div>
+
+        </div></div>
+
+                </div>
+
+            </div>
+            <div class="box2">
+                <div class="title">
+                    <button>
+                        <i class="bx bx-plus"></i>
+                    </button>
+                    <span>Atividade</span>
+                </div>
+                
+                
+            </div>
+        </section>
     </div>
-
 </div>
