--- a/my-app/src/app/components/dashboard/dashboard.component.css
+++ b/my-app/src/app/components/dashboard/dashboard.component.css
@@ -1,190 +1,133 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap");
 
 * {
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
+h3 {
+    font-size: 15px;
+}
 
-
+h4 {
+    font-size: 12px;
+    color: #bab4e5;
+    margin-top: 5px;
+}
+h5{
+    font-size: 10px;
+}
 .container {
     margin: 0 auto;
-    width: 80%;
+    width: 90%;
     height: 100vh;
     display: grid;
-    grid-template-columns: 200px 1fr;
-    grid-template-rows: 80px 1fr;
+    grid-template-rows: 60px 1fr;
+    grid-template-columns: 200px 1fr 300px;
     box-shadow: 0 0 20px 10px #ccc;
-
+    border-radius: 20px;
 }
 
-/* -------------------------------------------------------- */
-/* ------------------------------------------------------------ */
-/* ________________________________________________________________ */
-
-
 .menu {
-    background: #f7f8fA;
+    background: #f7f8fa;
     /* border: 1px solid black; */
 }
 
-
-
-/* -------------------------------------------------------- */
-/* ------------------------------------------------------------ */
-/* ________________________________________________________________ */
-
-
-/* ----------------------------------------- */
-/* 
-.content .overview {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    margin: 30px 20px;
-} */
-
-/* -------------------------------------------- */
-
-
-
-/* -------------------------------------------------------- */
-/* ------------------------------------------------------------ */
-/* ________________________________________________________________ */
-
-
-
-
 .header1 {
-    background: #3E87F0;
+    background: #3e87f0;
     /* border: 1px solid black; */
     color: #fff;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+}
 
-}
-/* -------------------------------------------------- */
 .header1 i {
-    font-size: 25px;
+    font-size: 24px;
 }
-/* ------------------------------------------------ */
 
 .header1 h2 {
     font-weight: 400;
 }
 
-/* ------------------------------------------------ */
-
 .header2 {
     background: #fff;
     /* border: 1px solid black; */
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    justify-content: center;
+    grid-template-columns: auto auto;
+    justify-content: space-between;
     align-items: center;
-    padding: 20px;
 
 }
-/* ----------------------------------------------------- */
 
 .header2 i {
-    font-size: 21px;
-    color: rgba(130, 129, 129, 0.519);
+    font-size: 20px;
+    color: #afafaf;
     margin: 10px;
-
 }
-
-/* -------------------------------------------------------- */
-
-
-.header2 .box-dir {
-    display: flex;
-    justify-content: end;
-}
-
-
-/* -------------------------------------------------------- */
-/* ------------------------------------------------------------ */
-/* ______________________________________________________________ */
 
 .menu ul {
     margin-top: 20px;
     margin-left: 10px;
-
 }
-/* --------------------------------------------- */
 
-.menu li {
-    padding: 10px;
+.menu ul li {
+    padding: 18px;
     list-style: none;
-    display: flex;
-    align-items: center;
-
+    /* display: flex; */
+    /* align-items: center; */
 }
 
-
-.menu li:hover .menu li a:hover {
+.menu li a:hover {
     color: #947dd2;
 }
 
-
-
-
-
-/* ---------------------------------------------- */
 .menu li a {
     text-decoration: none;
     font-size: 20px;
-    color: rgba(130, 129, 129, 0.519);
-    margin-left: 15px;
+    color: #696969;
+    display: flex;
+    gap: 12px;
+    align-items: center;
 
+    /* margin-left: 15px; */
 }
-
-/* ------------------------------------------ */
-
-.menu li i {
-    font-size: 20px ;
-}
-
-
 
 .content .ad {
     display: grid;
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 180px;
-    margin: 25px;
+    margin: 30px;
     gap: 20px;
-
 }
 
 .content .ad .img {
-    background:#fbe5ca;
+    background: #fbe5ca;
 }
-
 
 .content .ad .graph {
     background: #f0edfe;
 }
 
-
 section {
     display: grid;
-    grid-template-columns: 1fr 300px;
-    grid-template-rows: 400px;
-    margin: 30px;
-    gap:  20px;
+    grid-template-columns: 1fr 450px;
+    grid-template-rows: 500px;
+    margin: 20px 30px;
+    gap: 20px;
 }
 
-
+section .box2 {
+    background: #3af;
+}
 
 .title {
     background: #e4f7f0;
-    height: 60px;
+    height: 45px;
     display: flex;
     align-items: center;
     padding: 5px 25px;
-    border-radius: 6px;
+    border-radius: 5px;
     box-shadow: 0 0 5px 4px #eee;
 }
 
@@ -193,10 +136,10 @@ section {
     color: #fff;
     border-radius: 50%;
     border: none;
-    width: 34px;
-    height: 34px;
-    padding: 5px;
+    width: 35px;
+    height: 35px;
     font-size: 15px;
+    font-weight: bold;
 }
 
 .title span {
@@ -204,3 +147,53 @@ section {
     font-weight: 600;
     margin-left: 15px;
 }
+
+section .box1 .member {
+    background: #f8fafd;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 60px 60px 60px;
+    margin: 20px 0;
+    padding: 20px;
+    gap: 15px;
+}
+
+section .box1 .member .card-member {
+    display: grid;
+    grid-template-columns: 80px 1fr;
+    align-items: center;
+
+}
+
+section .box1 .member .card-member img {
+    width: 40px;
+}
+
+ .container .user-info{
+    grid-column: 3/4 ;
+    grid-row: 1 / 3 ;
+ }
+
+
+  .content .activies {
+    display: grid;
+ grid-template-columns: 1fr 1fr;
+ grid-template-rows: 60px 80px;
+ gap: 10px;
+ margin: 20px;
+ }
+
+ .content .activies div{
+    background: #f8fafd ;
+    }
+
+    .activies .card-member img{
+        width:30px;
+    }
+    .activies .card-member{
+        display: grid;
+        grid-template-columns: auto 1fr;
+        gap: 15px;
+        padding: 10px;
+       
+    }
