--- a/my-app/src/app/components/dashboard/dashboard.component.html
+++ b/my-app/src/app/components/dashboard/dashboard.component.html
@@ -19,7 +19,52 @@
     </div>
 
     <div class="user-info">
-  xxx
+
+    <div class="box-1">
+        <i class='bx bx-bell' ></i>
+        <i class='bx bx-cog'></i>
+        <i class='bx bx-user-circle'></i>
+
+    </div>
+
+
+    <div class="box-2">
+        <div class="img"><img src="/assets/lerolero.png " alt=""></div>
+        <h3>Bruno Pereira</h3>
+        <h5>bruno5@gmail.com</h5>
+
+
+    </div>
+
+    <div class="box-3">
+    <div class="caixa1">
+      <div class="item1"></div>
+      <i class='bx bxs-trophy' ></i>
+      <h5>eu não sei</h5>
+
+
+    </div>
+
+
+
+
+    <div class="caixa2">
+        <div class="item2">
+            <i class='bx bxs-trophy' ></i>
+            <h5>eu não sei</h5>
+        </div>
+
+    </div>
+
+
+
+
+    </div>
+
+    <div class="box-4"></div>
+
+    <div class="box-5"></div>
+
     </div>
 
 
