--- a/my-app/src/app/components/page-not-found/page-not-found.component.css
+++ b/my-app/src/app/components/page-not-found/page-not-found.component.css
@@ -1,54 +1,48 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
-    font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
-
-
 .container1 {
-    background: linear-gradient(60deg, #9734FF, rgb(78, 78, 209));
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
+  background: linear-gradient(60deg, #9734ff, rgb(78, 78, 209));
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .error {
-    position: relative;
-    z-index: 1;
-    left: 300px;
-    width: 450px;
-    background-color: bisque;
-    background-image: url();
-    background-position: center center;
-    height: 450px;
+  position: relative;
+  z-index: 1;
+  left: 300px;
+  width: 450px;
+  background-color: bisque;
+  background-position: center center;
+  height: 450px;
 
-    border-radius: 15px;
-    box-shadow: rgba(83, 58, 2, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-    display: flex;
-    flex-direction: column;
+  border-radius: 15px;
+  box-shadow: rgba(83, 58, 2, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  display: flex;
+  flex-direction: column;
 
-    align-items: center;
+  align-items: center;
 }
-
-
 
 .error h1 {
-    margin: 50px;
-    color: rgb(184, 139, 97);
+  margin: 50px;
+  color: rgb(184, 139, 97);
 }
 
-
-
 .container {
-    position: center;
-    width: 1000px;
-    height: 800px;
-    background: rgb(179, 139, 102);
-    margin: 35px;
-    border-radius: 30px;
-    display: flex;
-    align-items: center;
+  position: center;
+  width: 1000px;
+  height: 800px;
+  background: rgb(179, 139, 102);
+  margin: 35px;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
 }
