--- a/my-app/src/app/components/dashboard/dashboard.component.html
+++ b/my-app/src/app/components/dashboard/dashboard.component.html
@@ -18,57 +18,175 @@
         </div>
     </div>
 
+    <!-- User Information -->
     <div class="user-info">
-
-    <div class="box-1">
-        <i class='bx bx-bell' ></i>
-        <i class='bx bx-cog'></i>
-        <i class='bx bx-user-circle'></i>
-
-    </div>
-
-
-    <div class="box-2">
-        <div class="img"><img src="/assets/lerolero.png " alt=""></div>
-        <h3>Bruno Pereira</h3>
-        <h5>bruno5@gmail.com</h5>
-
-
-    </div>
-
-    <div class="box-3">
-    <div class="caixa1">
-      <div class="item1"></div>
-      <i class='bx bxs-trophy' ></i>
-      <h5>eu não sei</h5>
-
-
-    </div>
-
-
-
-
-    <div class="caixa2">
-        <div class="item2">
-            <i class='bx bxs-trophy' ></i>
-            <h5>eu não sei</h5>
+        <div class="box-1">
+            <i class="bx bx-bell"></i>
+            <i class="bx bx-cog"></i>
+            <i class="bx bxs-user-circle"></i>
         </div>
 
-    </div>
+        <div class="box-2">
+            <div class="img">
+                <img src="/assets/avatar.png" alt="" />
+            </div>
+            <h3>José Roberto Campos</h3>
+            <h5>jose.campos@ifms.edu.br</h5>
+        </div>
+        <div class="box-3">
+
+            <div class="box">
+                <div class="item-1">
+                    <div class="troph">
+                        <i class='bx bx-trophy'></i>
+                    </div>
+                    <div>
+                        <h4>20</h4>
+                        <h4>Número 20</h4>
+                    </div>
+                </div>
+                <div class="item-2">
+                    <div class="troph">
+                        <i class='bx bx-user'></i>
+                    </div>
+                    <div>
+                        <h4>40</h4>
+                        <h4>Número 40</h4>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+
+
+
+        <div class="box-4">
+            <div class="user-title">
+                <h2> Tarefas em andamento</h2>
+                <a href="#">Mostrar todos</a>
+            </div>
+            <div class="task-1">
+                <div>
+                    <span>01</span>
+                </div>
+
+                <div>
+                    <h3>programar o tudo list</h3>
+                    <h4>Tempo restante: 1d</h4>
+                </div>
+
+            </div>
+
+            <div class="task-2">
+                <div>
+                    <span>01</span>
+                </div>
+
+                <div>
+                    <h3>Corrigir o Index.css</h3>
+                    <h4>Tempo restante: 3d</h4>
+                </div>
+
+
+
+            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        </div>
+        <div class="box-5">
+
+            <div class="user-title">
+                <h2> Tarefas Recentes</h2>
+                <a href="#">Mostrar todos</a>
+            </div>
+
+        </div>
+
+        <div class="recent-task">
+            <div class="status">
+                <div class="ball"></div>
+                <span>Adicionar Botão em Task</span>
+            </div>
+            <div>
+                <span>4 Days</span>
+            </div>
+
+
+        </div>
+        <div class="recent-task">
+            <div class="status">
+                <div class="ball"></div>
+                <span>Adicionar Botão em Task</span>
+            </div>
+            <div>
+                <span>4 Days</span>
+            </div>
+
+
+        </div>
+        <div class="recent-task">
+            <div class="status">
+                <div class="ball"></div>
+                <span>Adicionar Botão em Task</span>
+            </div>
+            <div>
+                <span>4 Days</span>
+            </div>
+
+
+        </div>
+        <div class="recent-task">
+            <div class="status">
+                <div class="ball"></div>
+                <span>Adicionar Botão em Task</span>
+            </div>
+            <div>
+                <span>4 Days</span>
+            </div>
+
+
+        </div>
+        <div class="recent-task">
+            <div class="status">
+                <div class="ball"></div>
+                <span>Adicionar Botão em Task</span>
+            </div>
+            <div>
+                <span>4 Days</span>
+            </div>
+
+
+        </div>
+
+
+
+
+
+
+
+
 
 
 
 
     </div>
-
-    <div class="box-4"></div>
-
-    <div class="box-5"></div>
-
-    </div>
-
-
-
 
     <!-- MENU -->
     <div class="menu">
@@ -109,84 +227,82 @@
                     </button>
                     <span>Membros do Time</span>
                 </div>
+
                 <div class="member">
-
+                    <!-- CARD MEMBER -->
                     <div class="card-member">
-
                         <div class="img">
-                            <img src="/assets/cara-feliz.png" alt="">
+                            <img src="/assets/avatar.png" alt="" />
                         </div>
 
                         <div class="name">
-                            <h3>Prof. Carlos</h3>
+                            <h3>Prof. Beto</h3>
                             <h4>Professor</h4>
                         </div>
-
                     </div>
+                    <!-- FIM CARD MEMBER -->
+                    <!-- CARD MEMBER -->
                     <div class="card-member">
-
                         <div class="img">
-                            <img src="/assets/cara-feliz.png" alt="">
+                            <img src="/assets/avatar.png" alt="" />
                         </div>
 
                         <div class="name">
-                            <h3>Prof. Rodrigo</h3>
+                            <h3>Prof. Beto</h3>
                             <h4>Professor</h4>
                         </div>
-
                     </div>
+                    <!-- FIM CARD MEMBER -->
+                    <!-- CARD MEMBER -->
                     <div class="card-member">
-
                         <div class="img">
-                            <img src="/assets/avatar.png" alt="">
+                            <img src="/assets/avatar.png" alt="" />
                         </div>
 
                         <div class="name">
-                            <h3>Prof. Bruna</h3>
-                            <h4>Professora</h4>
-                        </div>
-
-                    </div>
-                    <div class="card-member">
-
-                        <div class="img">
-                            <img src="/assets/avatar.png" alt="">
-                        </div>
-
-                        <div class="name">
-                            <h3>Prof. Ivone</h3>
-                            <h4>Professora</h4>
-                        </div>
-
-                    </div>
-                    <div class="card-member">
-
-                        <div class="img">
-                            <img src="/assets/avatar.png" alt="">
-                        </div>
-
-                        <div class="name">
-                            <h3>Prof. Mariana</h3>
-                            <h4>Professora</h4>
-                        </div>
-
-                    </div>
-                    <div class="card-member">
-
-                        <div class="img">
-                            <img src="/assets/cara-feliz.png" alt="">
-                        </div>
-
-                        <div class="name">
-                            <h3>Prof. Apio</h3>
+                            <h3>Prof. Beto</h3>
                             <h4>Professor</h4>
                         </div>
-
                     </div>
+                    <!-- FIM CARD MEMBER -->
+                    <!-- CARD MEMBER -->
+                    <div class="card-member">
+                        <div class="img">
+                            <img src="/assets/avatar.png" alt="" />
+                        </div>
 
+                        <div class="name">
+                            <h3>Prof. Beto</h3>
+                            <h4>Professor</h4>
+                        </div>
+                    </div>
+                    <!-- FIM CARD MEMBER -->
+                    <!-- CARD MEMBER -->
+                    <div class="card-member">
+                        <div class="img">
+                            <img src="/assets/avatar.png" alt="" />
+                        </div>
 
+                        <div class="name">
+                            <h3>Prof. Beto</h3>
+                            <h4>Professor</h4>
+                        </div>
+                    </div>
+                    <!-- FIM CARD MEMBER -->
+                    <!-- CARD MEMBER -->
+                    <div class="card-member">
+                        <div class="img">
+                            <img src="/assets/avatar.png" alt="" />
+                        </div>
 
+                        <div class="name">
+                            <h3>Prof. Beto</h3>
+                            <h4>Professor</h4>
+                        </div>
+                    </div>
+                    <!-- FIM CARD MEMBER -->
                 </div>
+
                 <div class="title">
                     <button>
                         <i class="bx bx-plus"></i>
@@ -194,154 +310,76 @@
                     <span>Atividade</span>
                 </div>
 
-                <div class="activies">
+                <div class="activity">
+                    <div class="item-1">
+                        <!-- CARD MEMBER -->
+                        <div class="card-member">
+                            <div class="img">
+                                <img src="/assets/avatar.png" alt="" />
+                            </div>
 
-        <div class="item-1">
-            <div class="card-member">
+                            <div class="name">
+                                <h3>Prof. Beto</h3>
+                                <h4>Professor</h4>
+                                <h5>11 maio 2023</h5>
+                            </div>
+                        </div>
+                        <!-- FIM CARD MEMBER -->
+                    </div>
+                    <div class="item-2">
+                        <!-- CARD MEMBER -->
+                        <div class="card-member">
+                            <div class="img">
+                                <img src="/assets/avatar.png" alt="" />
+                            </div>
 
-                <div class="img">
-                    <img src="/assets/cara-feliz.png" alt="">
+                            <div class="name">
+                                <h3>Prof. Beto</h3>
+                                <h4>Professor</h4>
+                                <h5>11 maio 2023</h5>
+                            </div>
+                        </div>
+                        <!-- FIM CARD MEMBER -->
+                    </div>
+                    <div class="item-3">
+                        <!-- CARD MEMBER -->
+                        <div class="card-member">
+                            <div class="img">
+                                <img src="/assets/avatar.png" alt="" />
+                            </div>
+
+                            <div class="name">
+                                <h3>Prof. Beto</h3>
+                                <h4>Professor</h4>
+                                <h5>11 maio 2023</h5>
+                            </div>
+                        </div>
+                        <!-- FIM CARD MEMBER -->
+                    </div>
+                    <div class="item-4">
+                        <!-- CARD MEMBER -->
+                        <div class="card-member">
+                            <div class="img">
+                                <img src="/assets/avatar.png" alt="" />
+                            </div>
+
+                            <div class="name">
+                                <h3>Prof. Julio</h3>
+                                <h4>Professor</h4>
+                                <h5>11 maio 2023</h5>
+                            </div>
+                        </div>
+                        <!-- FIM CARD MEMBER -->
+                    </div>
                 </div>
-
-                <div class="name">
-                    <h3>Prof. Apio</h3>
-                    <h4>Professor</h4>
-                    <h4>11 de maio</h4>
-                </div>
-
-            </div>
-
-        </div>
-
-
-
-        <div class="item-2"> <div class="card-member">
-
-            <div class="img">
-                <img src="/assets/avatar.png" alt="">
-            </div>
-
-            <div class="name">
-                <h3>Prof. Ivone</h3>
-                <h4>Professora</h4>
-            </div>
-
-        </div>
-        <div class="card-member">
-
-            <div class="img">
-                <img src="/assets/avatar.png" alt="">
-            </div>
-
-            <div class="name">
-                <h3>Prof. Mariana</h3>
-                <h4>Professora</h4>
-            </div>
-
-        </div>
-        <div class="card-member">
-
-            <div class="img">
-                <img src="/assets/cara-feliz.png" alt="">
-            </div>
-
-            <div class="name">
-                <h3>Prof. Apio</h3>
-                <h4>Professor</h4>
-            </div>
-
-        </div></div>
-
-
-
-        <div class="item-3"> <div class="card-member">
-
-            <div class="img">
-                <img src="/assets/avatar.png" alt="">
-            </div>
-
-            <div class="name">
-                <h3>Prof. Ivone</h3>
-                <h4>Professora</h4>
-            </div>
-
-        </div>
-        <div class="card-member">
-
-            <div class="img">
-                <img src="/assets/avatar.png" alt="">
-            </div>
-
-            <div class="name">
-                <h3>Prof. Mariana</h3>
-                <h4>Professora</h4>
-            </div>
-
-        </div>
-        <div class="card-member">
-
-            <div class="img">
-                <img src="/assets/cara-feliz.png" alt="">
-            </div>
-
-            <div class="name">
-                <h3>Prof. Apio</h3>
-                <h4>Professor</h4>
-            </div>
-
-        </div></div>
-
-
-
-        <div class="item-4"> <div class="card-member">
-
-            <div class="img">
-                <img src="/assets/avatar.png" alt="">
-            </div>
-
-            <div class="name">
-                <h3>Prof. Ivone</h3>
-                <h4>Professora</h4>
-            </div>
-
-        </div>
-        <div class="card-member">
-
-            <div class="img">
-                <img src="/assets/avatar.png" alt="">
-            </div>
-
-            <div class="name">
-                <h3>Prof. Mariana</h3>
-                <h4>Professora</h4>
-            </div>
-
-        </div>
-        <div class="card-member">
-
-            <div class="img">
-                <img src="/assets/cara-feliz.png" alt="">
-            </div>
-
-            <div class="name">
-                <h3>Prof. Apio</h3>
-                <h4>Professor</h4>
-            </div>
-
-        </div></div>
-
-                </div>
-
             </div>
             <div class="box2">
                 <div class="title">
                     <button>
                         <i class="bx bx-plus"></i>
                     </button>
-                    <span>Atividade</span>
+                    <span>Adicionar nova tarefa</span>
                 </div>
-                
-                
             </div>
         </section>
     </div>
