--- a/my-app/src/app/components/dashboard/dashboard.component.css
+++ b/my-app/src/app/components/dashboard/dashboard.component.css
@@ -2,29 +2,36 @@
 
 * {
     font-family: "Poppins", sans-serif;
+    text-decoration: none;
+}
+
+
+h2 {
+    font-size: 16px;
 }
 
 h3 {
-    font-size: 15px;
+    font-size: 14px;
 }
 
 h4 {
-    font-size: 12px;
-    color: #bab4e5;
+    font-size: 11px;
     margin-top: 5px;
 }
-h5{
+
+h5 {
     font-size: 10px;
+    margin-top: 10px;
 }
+
 .container {
     margin: 0 auto;
-    width: 90%;
+    width: 100vw;
     height: 100vh;
     display: grid;
     grid-template-rows: 60px 1fr;
-    grid-template-columns: 200px 1fr 300px;
+    grid-template-columns: 200px 1fr 360px;
     box-shadow: 0 0 20px 10px #ccc;
-    border-radius: 20px;
 }
 
 .menu {
@@ -57,7 +64,6 @@ h5{
     grid-template-columns: auto auto;
     justify-content: space-between;
     align-items: center;
-
 }
 
 .header2 i {
@@ -97,7 +103,7 @@ h5{
     display: grid;
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 180px;
-    margin: 30px;
+    margin: 20px 30px;
     gap: 20px;
 }
 
@@ -115,6 +121,26 @@ section {
     grid-template-rows: 500px;
     margin: 20px 30px;
     gap: 20px;
+}
+
+section .box1 .member {
+    background: #f8fafd;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 60px 60px 60px;
+    margin: 20px 0;
+    padding: 20px;
+}
+
+section .box1 .member .card-member {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: center;
+    gap: 15px;
+}
+
+section .box1 .member .card-member img {
+    width: 50px;
 }
 
 section .box2 {
@@ -148,159 +174,182 @@ section .box2 {
     margin-left: 15px;
 }
 
-section .box1 .member {
-    background: #f8fafd;
+.container .user-info {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 60px 60px 60px;
-    margin: 20px 0;
-    padding: 20px;
-    gap: 15px;
+    grid-template-rows: 75px 180px 100px 210px 1fr;
+    grid-template-columns: 3/4;
+    grid-row: 1/3;
 }
 
-section .box1 .member .card-member {
+.content .activity {
     display: grid;
-    grid-template-columns: 80px 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 80px 80px;
+    gap: 10px;
+    margin-top: 20px;
+}
+
+.content .activity div {
+    background: #f8fafd;
+}
+
+.activity .card-member img {
+    width: 40px;
+}
+
+.activity .card-member {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    gap: 15px;
+    padding: 10px;
+}
+
+.container .user-info {
+    display: grid;
+    grid-template-rows: 75px 1fr 100px 200px 1fr;
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
+}
+
+.container .user-info .box-1 {
+    display: flex;
+    gap: 16px;
+    justify-content: end;
+    align-items: center;
+    padding-right: 30px;
+}
+
+.container .user-info .box-1 i {
+    font-size: 30px;
+    color: #696969;
+}
+
+.container .user-info .box-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.container .user-info .box-2 img {
+    width: 100px;
+    margin-bottom: 10px;
+}
+
+.container .user-info .box-2 h5 {
+    color: #b0abe2;
+}
+
+.container .user-info .box-3 .box {
+    background: #f0ecff;
+    width: 280px;
+    height: 90px;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    border-radius: 8px;
+}
+
+.container .user-info .box-3 .box .item-1,
+.container .user-info .box-3 .box .item-2 {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.container .user-info .box-3 .box .troph {
+    width: 40px;
+    height: 40px;
+    background: #fff;
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+}
+
+.container .user-info .box-3 {
+    margin: 0 auto;
+}
+
+.container .user-info .box-3 i {
+    font-size: 22px;
+    color: #b0abe2;
+}
+
+.container .user-info .box-3 .item-2 i,
+.container .user-info .box-3 .item-2 h4 {
+
+    color: #f47c51;
+}
+
+
+
+.container .user-info .user-title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px;
+
+
+}
+
+
+
+
+.container .user-info .box-4 .task-1 {
+    background: #f47c51;
+    margin: 0 15px;
+    height: 70px;
+    border-radius: 8px;
+    display: flex;
     align-items: center;
 
 }
 
-section .box1 .member .card-member img {
+
+.container .user-info .box-4 .task-1 div:nth-child(1){
+    background:#ffffff46;
     width: 40px;
+    height: 40px;
+    color: #fff;
+    margin: 10px;
+    display: grid;
+    place-items:8px ;
+
 }
 
- .container .user-info{
-    grid-column: 3/4 ;
-    grid-row: 1 / 3 ;
- }
 
 
-  .content .activies {
-    display: grid;
- grid-template-columns: 1fr 1fr;
- grid-template-rows: 60px 80px;
- gap: 10px;
- margin: 20px;
- }
+.container .user-info .box-4 .task-2 {
 
- .content .activies div{
-    background: #f8fafd ;
-    }
+    background: #6458f2;
+    margin: 10px 15px;
+    height: 70px;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
 
-    .activies .card-member img{
-        width:30px;
-    }
-    .activies .card-member{
-        display: grid;
-        grid-template-columns: auto 1fr;
-        gap: 15px;
-        padding: 10px;
-       
-    }
+}
 
 
-    .container .user-info {
-      
-        display: grid;
-        grid-template-rows: 100px 250px 90px 150px;
-    }
+.container .user-info .box-4 .task-2 div:nth-child(3){
+    color: #fff;
+}
 
-  
-    .container  .user-info .box-2{
-        flex-direction: column;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        
-    }
+.container .user-info .box-5 .recent-task {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 15px;
+}
 
-    .container  .user-info .box-2 img{
-        width: 150px;
-        margin-bottom: 6px;
-    }
+.container .user-info .box-5 .recent-task .ball{
+    background: #40c17d;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+}
 
-    .container  .user-info .box-2 h5{
-        color: #b0abe2;
-    }
-
-
-
-
-
-    .container  .user-info .box-3{
-        background: rgb(232, 227, 233);
-        grid-template-rows: 1fr;
-        margin:0 auto ;
-        border-radius: 30px;
-        
-    }
-
-
-    .container  .user-info .box-3 .caixa1{
-        border-right: 1px solid#b0abe2;
-        display: grid;
-        width: 200px;
-        height: 80px;
-        padding: 20px;
-        grid-template-columns: 1fr 1fr;
-        
-        
-    }
-    .container  .user-info .box-3 .caixa2{
-        border-right: 1px solid#b0abe2;
-        display: grid;
-        width: 200px;
-        height: 80px;
-        padding: 20px;
-        grid-template-columns: 1fr 1fr;
-        
-        
-    }
-
-
-
-
-
-    .container  .user-info .box-3 .caixa1 h5{
-        color:#b0abe2 ;
-
-    }
-
-
-    .container  .user-info .box-3 .caixa1 .item1{
-     width: 5px;
-     height: 50px;
-    background: rgb(255, 255, 255);
-    }
-
-
-
-
-
-
-
-    .container  .user-info .box-3 .caixa2{
-        border-radius: 30px;
-        display: grid;
-        
-    }
-
-
-
-
-
-
-
-    .container  .user-info .box-4{
-        background: rgb(147, 177, 16);
-        
-    }
-
-    .container  .user-info .box-5{
-        background: rgb(207, 37, 116);
-        
-    }
-
-
-
-
+.container .user-info .box-5 .recent-task .status{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
